zipkin/local/deployment.yaml
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: zipkin
  namespace: my-project
  labels:
    run: zipkin
spec:
  replicas: 1
  selector:
    matchLabels:
      run: zipkin
  template:
    metadata:
      annotations:
        linkerd.io/inject: enabled
      labels:
        run: zipkin
    spec:
      containers:
      - name: zipkin
        image: openzipkin/zipkin:2
        ports:
        - containerPort: 9411
          protocol: TCP
        imagePullPolicy: IfNotPresent
        resources:
          requests:
            memory: "1024Mi"
          limits:
            memory: "1024Mi"

      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      dnsPolicy: ClusterFirst
