zipkin/local/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: frontend-ingress
  namespace: my-project
  annotations:
    kubernetes.io/ingress.class: "public"
spec:
  rules:
  - host: zipkin.10.152.183.83.xip.io
    http:
      paths:
      - backend:
          serviceName: zipkin
          servicePort: 9411
